objects/Discount_Rules__mdt.object
<CustomObject>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eletronics</fullName>
                    <default>true</default>
                    <label>eletronics</label>
                </value>
                <value>
                    <fullName>SmartHome</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Digital Healthcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Smart TVs</fullName>
                    <default>true</default>
                    <label>Smart TVs</label>
                </value>
                <value>
                    <fullName>Fitness trackers</fullName>
                </value>
                <value>
                    <fullName>PS5</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Validity__c</fullName>
        <label>Product Validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Discount Rule</label>
    <pluralLabel>Discount Rules</pluralLabel>
</CustomObject>